# virtual-functions

./: .gitignore  basics.md  index.html  mistakes.md  overview.md  summary.md  virtual_functions.md
cpp/: CMakeLists.txt  demo1.cpp  demo1b.cpp  demo2.cpp
plugin/: compiler-explorer.js
